tests/script_errors/heredoc_interpolation_extractor/error.txt
Error: 
    1 | let heredoc = """
    2 | { | }
      |   ^^^ It looks like you forgot to terminate an extractor with a closing '|'